Version 0.8.2
-------------

- Added support for gzip/deflate-compressed appcasts.
- Added support for ARM-specific enclosures.
- Fixed handling of multiple enclosures to correctly pick the most-specific
  binary available, and to use the latest available app version.
- Fixed feed parsing to ignore appcast order of items and instead find the
  highest compatible version.
- Call cancelled/dismissed callbacks when user closes WinSparkle's window.
- New and updated translations.


Version 0.8.1
-------------

- Fixed release notes not shown if <sparkle:releaseNotesLink> is malformed
  and has whitespace around the URL.


Version 0.8.0
-------------

- Added support for modern Edge/WebView2 browser for release notes.
- Added win_sparkle_set_update_dismissed_callback() and
  win_sparkle_set_update_postponed_callback() callbacks.
- Added partiaul support for <sparkle:criticalUpdate> tag.
- Links in release notes now open in user's default browser as they should.
- Added support for Visual Studio 2019 and 2022.
- Added official NuGet package.
- Added support for ARM64 architecture.
- This version drops official support for Windows XP. It may still be possible
  to target it with vs*_xp toolsets, but would probably require at least
  disabling WebView2. Prebuilt binaries and NuGet package don't support XP.


Version 0.7.0
-------------

- Added support for providing custom HTTP headers when fetch appcast feeds.
- Added support for overriding WinSparkle config functions.
- Reduced size of WinSparkle.dll.


Version 0.6.0
-------------

- Added support for validating DSA signatures.
- Fixes to window placement.
- Fixed regression in win_sparkle_check_update_without_ui() not checking
  immediately.


Version 0.5.7
-------------

- Fixed issue with downloads from servers without keep-alive support.


Version 0.5.6
-------------

- Includes security fixes for Expat XML parser (CVE-2017-11742).


Version 0.5.5
-------------
